chore: HttpRequestMethodNotSupportedException 예외 처리 추가